# tkFontIcons

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
tk_font_icons/: __init__.py  __main__.py  feather.py  font_archive.py  font_awesome.py  phosphor.py
